force-app/main/default/objects/PNR__c/PNR__c.object-meta.xml
<CustomObject>
    <label>PNR</label>
    <nameField>
        <label>PNR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PNRs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>