force-app/main/default/objects/PNR__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PNR</label>
    <length>6</length>
    <type>Text</type>
</CustomField>