force-app/main/default/objects/PNR__c/validationRules/PNR_Alphanumeric_6_Char_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PNR_Alphanumeric_6_Char_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(PNR__c, &quot;^[a-zA-Z0-9]{6}$&quot;))</errorConditionFormula>
    <errorMessage>The PNR field must contain exactly 6 alphanumeric characters.</errorMessage>
</ValidationRule>