force-app/main/default/objects/PNR__c/validationRules/PrimaryPNRNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>PrimaryPNRNotNull</fullName>
    <active>true</active>
    <description>Checking if Primary PNR is provided on the case</description>
    <errorConditionFormula>AND(
    ISNEW(),
    ISBLANK(Case__r.Booking_PNR__c)
)</errorConditionFormula>
    <errorMessage>Additional PNR’s cannot be entered without a PNR in the Details tab</errorMessage>
</ValidationRule>